Added support for close and fclose
Added prototype support for chmod
Added basic support for escape strings
Added support for continue
Added string_length function to string.c
Added function numerate_string for converting string to integer
Added supporting hex2char, char2hex, dec2char and char2dec functions
Added support bitwise xor

** Changed
Improving Documentation to help new programmers get functional
Cleaned up numerate_number to make it more general purpose
Enabled stand alone builds of calloc
Unified bitwise operations
Made string.c more independent

** Fixed
Minor cleanup and removal of unneeded whitespace
Fixed outstanding bug when struct foo* foo and foo->bar was used
Fixed ":foo bug
Fixed "\n:foo bug
Adjusted all previous references to numerate_number to ensure output is consistent
Fixed up reader so that '\'' and "\"" work correctly now
fixed "\"" bug in string output generation

** Removed
Removed need for memset in numerate_number

* 0.1 - 2018-02-23
** Added
Added example programs
Added first generation libc
Added first generation defs.M1
added FOR Loop support along with example
Added support for assembly statements
Added CONSTANT to the language
Added support for <. >= and > expressions
Added struct support
Added unary - and ! support
Added additional functionality such as mixed structs, do while loops, gotos and tests for the new functionality
Incorporate breaks into loops
Became Self-Hosting

** Changed
Tweaked argument processing to help mescc support
Isolated global_token to cc.c
Moved strings to the bottom of the output
Broke out globals
Started to move type information out of hard-coded logic
Started adding tests instead of examples
Put common x86 platform logic in a shared folder to reduce duplicate code
Converted from legacy M2-Planet Input.c Output.c to M2-Planet -f input.c ... -f
Minor reordering of tests

** Fixed
expanded type support to include integer arrays
Reduced the memory churn in string creation
fixed Capitalization problems
