@@ -53,6 +53,7 @@ clean:
 	./test/test19/cleanup.sh
 	./test/test20/cleanup.sh
 	./test/test21/cleanup.sh
+	./test/test22/cleanup.sh
 	./test/test99/cleanup.sh
 	./test/test100/cleanup.sh
 
@@ -86,6 +87,7 @@ test: test00-binary \
 	test19-binary \
 	test20-binary \
 	test21-binary \
+	test22-binary \
 	test99-binary \
 	test100-binary | results
 	sha256sum -c test/test.answers
@@ -155,6 +157,9 @@ test20-binary: M2-Planet | results
 
 test21-binary: M2-Planet | results
 	test/test21/hello.sh
+
+test22-binary: M2-Planet | results
+	test/test22/hello.sh
 
 test99-binary: M2-Planet | results
 	test/test99/hello.sh
