@@ -21,4 +21,5 @@ ca2c1321cbcbf3f551860fc0857d0a816660ba541987f9ed7f92f8553cd6b06b  test/results/t
 33f7802c581d3b6382a1b63211564529419769a9788b5a5cac856e45b9eac57c  test/results/test19-binary
 6fa44153ee3f27f0df49b282c0bb3017dbfaea906073c8c02b8bf5ad4d4a7860  test/results/test20-binary
 927094465f6772eaf9cc7d388b351a7e178ea6798476f87776d7dd44e9cfc072  test/results/test21-binary
+49eaa0c479d2a327d968e78a56baae36f5f18193062e885232727edadc5b7a2d  test/results/test22-binary
 ba3d9623c6512bc327cf934d994e5327e5fad3f7500896e2d8458467fae9b9e9  test/results/test99-binary
