@@ -1,0 +1,5 @@
+#! /bin/sh
+rm -f test/test22/hex2_linker.M1
+rm -f test/test22/hex2_linker.hex2
+rm -f test/test22/proof
+exit 0
